--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 @media screen and (max-width: 100%) {
   .notion-collection-gallery.large .notion-collection-card {
-    height: 50% !important;
+    height: auto !important;
   }
 }
 .notion-collection-gallery.large .notion-collection-card .notion-property__title {
@@ -69,184 +69,4 @@
 }
 .notion-collection-gallery.large .notion-collection-card:nth-child(n+2) {
   display: none !important;
-}
-
-#page-index .notion-header__title-wrapper, #page-index .notion-header__cover.no-cover {
-  display: none !important;
-}
-#page-index .notion-collection-gallery.medium {
-  grid-template-columns: 1fr 1fr !important;
-}
-
-.notion-collection-list {
-  gap: 8px !important;
-  padding: 0px !important;
-  margin-top: 16px !important;
-}
-.notion-collection-list .notion-property__title {
-  white-space: normal !important;
-}
-.notion-collection-list .notion-property__title * {
-  font-weight: 700 !important;
-  letter-spacing: var(--db-title-spacing) !important;
-}
-.notion-collection-list .notion-property__title .notion-semantic-string {
-  white-space: pre-wrap !important;
-}
-.notion-collection-list .notion-property__title .notion-semantic-string span {
-  border: none !important;
-}
-.notion-collection-list .notion-collection-list__item {
-  white-space: normal !important;
-  display: flex !important;
-  flex-direction: column !important;
-  align-items: flex-start !important;
-  border: 1px solid var(--color-border-default) !important;
-  padding: 8px !important;
-  border-radius: 8px !important;
-  transition: background 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) !important;
-}
-.notion-collection-list .notion-collection-list__item:nth-child(n+6) {
-  display: none !important;
-}
-.notion-collection-list .notion-collection-list__item:hover {
-  background: var(--color-card-bg-hover) !important;
-}
-
-.super-root:not(.page__index) .notion-header__title, .super-content:not(.page__index) .notion-header__title {
-  text-align: center !important;
-  width: 100% !important;
-}
-
-.parent-page__posts .super-content {
-  max-width: 740px !important;
-}
-.parent-page__posts .notion-bulleted-list, .parent-page__posts .notion-numbered-list, .parent-page__posts .notion-to-do, .parent-page__posts .notion-callout {
-  font-size: 1.2rem !important;
-}
-.parent-page__posts .notion-text__content {
-  font-size: 1.2rem !important;
-}
-.parent-page__posts .notion-text__content * {
-  line-height: 1.4 !important;
-}
-.parent-page__posts .notion-image.page-width {
-  max-width: 120% !important;
-  width: 120% !important;
-}
-.parent-page__posts .notion-header__content.max-width {
-  max-width: 840px !important;
-}
-.parent-page__posts .notion-property__person > .notion-semantic-string > span {
-  margin: 0 !important;
-}
-.parent-page__posts .notion-page__property {
-  display: flex !important;
-  width: fit-content !important;
-  margin: 0 auto !important;
-}
-
-.notion-dropdown__menu-header,
-.notion-dropdown__option-icon,
-.notion-dropdown__button svg:first-of-type {
-  display: none !important;
-}
-
-@media all and (min-width: 576px) {
-  .notion-dropdown {
-    width: 100% !important;
-    z-index: 1 !important;
-    margin-bottom: 16px !important;
-  }
-  .notion-dropdown__button {
-    justify-content: space-between !important;
-    width: 100% !important;
-    border: 1px solid var(--color-border-default) !important;
-    padding: 10x !important;
-    border-radius: 8px !important;
-  }
-  .notion-dropdown__menu-wrapper {
-    position: relative !important;
-  }
-  .notion-dropdown__menu-wrapper .notion-dropdown__menu {
-    width: 100% !important;
-    border-radius: 8px !important;
-    transform: none !important;
-    left: auto !important;
-    top: auto !important;
-  }
-  .notion-dropdown__menu-wrapper .notion-dropdown__menu .notion-dropdown__option-list {
-    padding: 0px !important;
-    flex-wrap: wrap !important;
-  }
-  .notion-dropdown__menu-wrapper .notion-dropdown__menu .notion-dropdown__option {
-    padding: 5px 10px !important;
-  }
-  .notion-dropdown__button {
-    display: none !important;
-  }
-  .notion-dropdown__menu.initial-state {
-    z-index: 1 !important;
-    opacity: 1 !important;
-    transform: none !important;
-  }
-  .notion-dropdown__menu.animate-in.animate-out,
-.notion-dropdown__menu.animate-in,
-.notion-dropdown__menu.animate-out {
-    animation: none !important;
-  }
-  .notion-dropdown__menu {
-    width: 80% !important;
-    margin: 0 auto !important;
-    background: none !important;
-    box-shadow: unset !important;
-    position: relative !important;
-  }
-  .notion-dropdown__menu .notion-dropdown__option-list {
-    display: flex !important;
-    gap: 8px !important;
-  }
-  .notion-dropdown__menu .notion-dropdown__option.active {
-    background: var(--picker-active-bg-color) !important;
-    border: 1px solid var(--picker-active-border-color) !important;
-  }
-  .notion-dropdown__menu .notion-dropdown__option.active p {
-    color: var(--picker-active-text-color) !important;
-  }
-  .notion-dropdown__menu .notion-dropdown__option {
-    border-radius: var(--picker-border-radius) !important;
-    border: 1px solid var(--picker-border-color) !important;
-    transition: all 0.15s ease-in-out !important;
-    align-items: center !important;
-  }
-  .notion-dropdown__menu .notion-dropdown__option:hover {
-    background: var(--picker-hover-bg-color) !important;
-    border-color: var(--picker-hover-border-color) !important;
-  }
-  .notion-dropdown__menu .notion-dropdown__option:hover p {
-    color: var(--picker-hover-text-color) !important;
-  }
-  .notion-dropdown__menu .notion-dropdown__option p {
-    font-size: 0.9rem !important;
-    letter-spacing: -0.3px !important;
-    color: var(--picker-text-color) !important;
-  }
-}
-@media all and (max-width: 100%) {
-  #page-index .notion-collection-gallery.large .notion-collection-card {
-    flex-direction: column !important;
-  }
-  #page-index .notion-collection-gallery.medium {
-    grid-template-columns: 1fr !important;
-  }
-  #page-posts .notion-collection-gallery.medium {
-    grid-template-columns: 1fr !important;
-  }
-}
-.notion-collection-page .notion-dropdown__menu-wrapper {
-  left: 0px !important;
-}
-
-.notion-collection-list__item .notion-property.notion-property__title .notion-semantic-string > span {
-  white-space: pre-wrap !important;
 }
